  Previously, the application terminated if there were no top level windows;
  now it terminates if there are no top level windows or taskbar icons left.
- wxZlibInputStream is not by default compatible with the output of the
  2.4.x version of wxZlibOutputStream. However, there is a compatibilty mode,
  switched on by passing wxZLIB_24COMPATIBLE to the constructor.

wxTaskBarIcon must be explicitly destroyed now, otherwise the application
  won't exit even though there are no top level windows


DEPRECATED METHODS SINCE 2.4.x
==============================

Deprecated methods may still be used but will disappear in future wxWindows
versions, please update your code to not use them.

- wxDocManager::GetNoHistoryFiles() renamed to GetHistoryFilesCount()
- wxSizer::Remove(wxWindow *), use Detach() instead [it is more clear]
- wxSizer::Set/GetOption(): use Set/GetProportion() instead
- wxKeyEvent::KeyCode(): use GetKeyCode instead
- wxList::Number, First, Last, Nth: use GetCount, GetFirst/Last, Item instead
- wxNode::Next, Previous, Data: use GetNext, GetPrevious, GetData instead
- wxListBase::operator wxList&(): use typesafe lists instead
- wxTheFontMapper: use wxFontMapper::Get() instead
- wxStringHashTable: use wxHashMap instead
- wxHashTableLong: use wxHashMap instead
- wxArrayString::GetStringArray: use wxCArrayString or alternative wxWindows
                                 methods taking wxArrayString
- wxArrayString::Remove(index, count): use RemoveAt instead
- wxTreeItemId conversion to long is deprecated and shouldn't be used
- wxTreeCtrl::GetFirst/NextChild() 2nd argument now has type wxTreeItemIdValue
  and not long, please change declarations of "cookie"s in your code
  accordingly -- otherwise your code won't work on 64 bit platforms
- [MSW only] wxWindow::GetUseCtl3D(), GetTransparentBackground() and
             SetTransparent() as well as wxNO_3D and wxUSER_COLOURS styles
- wxList keyed interface: use wxHashMap instead